# face-detection

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md
face-detection/: app.py  plots.py  webstreaming.py
face-detection/models/: haarcascade_frontalface_default.xml
face-detection/src/: emotion_detector.py  face_detector.py  facemask_detector.py  utils.py
