[tool.poetry]
name = "face-detection"
version = "0.1.0"
description = ""
authors = ["Sebastian Blum <sebast.blum@gmail.com>"]
readme = "README.md"
#packages = [{include = "face_detection"}]

[tool.poetry.dependencies]
python = "3.11.3"
numpy = "^1.23"
matplotlib = "^3.7.1"
pillow = "^9.5.0"
flask = "^2.3.2"
opencv-contrib-python = "^4.7.0.72"
imutils = "^0.5.4"
tensorflow = "^2.12.0"
streamlit = "^1.23.1"
plotly = "^5.15.0"
ipywidgets = "^8.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
